--- a/templates/index.html
+++ b/templates/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-  <main class="app-content" style= "margin:0%;height:100vh;">
-        <div class="tile" style="margin:100px;text-align:center;height:30vh; background-color:gray;">
+  <section class="material-half-bg">
+      <div class="cover"></div>
+    </section>
+    <div class="tile" style="margin:25vh;;text-align:center;height:30vh; background-color:gray;">
             <div class="tile">
                     <h3 class="tile-title">Universal Medical Card Portal</h3>
                     <div class="tile"><a class="btn btn-primary" href="{{ url_for('register') }}">Register</a></div>
-                    <div class="tile"><a class="btn btn-primary" href="#">Login</a></div>
+                    <div class="tile"><a class="btn btn-primary" href="{{ url_for('login') }}">Login</a></div>
             </div>
         </div>
-    </main>
+    </section>
   </body>
