--- a/templates/UserRegistration1.html
+++ b/templates/UserRegistration1.html
@@ -12,11 +12,9 @@
   </head>
   <body>
     <section class="material-half-bg">
-      <div class="cover"></div>
+
     </section>
     <div class="container">
-      <br>
-      <br>
       <br>
       <br>
       <style type="text/css">
@@ -27,14 +25,15 @@
       <div class="row">
         <div class="col-lg-12 col-md-12">
           <div class="heading-title text-center">
-            <h2 class="title iq-tw-6 iq-font-white">User Registration</h2>
+            <h2 class="title iq-tw-6 iq-font-white">User Registration {% if context is defined%}{{ context["gell"] }}{% endif %}</h2>
           </div>
         </div>
       </div>
       <div class="row justify-content-md-center">
         <div class="col-md-8">
           <div class="iq-login iq-pt-40 iq-pb-30 iq-plr-30">
-            <form action="tripcreateprocess.php" method="POST">
+            <form action="/register" method="POST" enctype="multipart/form-data"> 
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
               <div class="form-group">
                 <label class="iq-font-white">Name</label>
                 <input type="text" class="form-control" name="uname" placeholder="Name Required" maxlength="80">
@@ -47,11 +46,20 @@
               </div>
               <div class="form-group">
                 <label class="iq-font-white">Aadhar</label>
-                <input type="text" class="form-control" name="aadhar" placeholder="Aadhar Required" maxlength="80">
+                <input type="text" class="form-control" name="aadhar" placeholder="Aadhar Required" maxlength="12">
+                <input type="file" class="form-control" name="aadhar-file" placeholder="Aadhar Required">
               </div>
               <div class="form-group">
                 <label class="iq-font-white">Phone</label>
                 <input type="text" class="form-control" name="phone" placeholder="Phone Required" maxlength="10">
+              </div>
+              <div class="form-group">
+                <label class="iq-font-white">Email</label>
+                <input type="text" class="form-control" name="email" placeholder="Email Required" maxlength="100">
+              </div>
+              <div class="form-group">
+                <label class="iq-font-white">Password</label>
+                <input type="text" class="form-control" name="pass" placeholder="Email Required" maxlength="32">
               </div>
               <div class="form-group iq-mt-20">
                 <div class="row iq-mt-30">
