Admin Panel Improvements

--- a/admin/templates/admin_panel_navigation_template.html
+++ b/admin/templates/admin_panel_navigation_template.html
@@ -4,13 +4,14 @@
 	<title>Hello</title>
 	<!-- Main CSS-->
 	<link rel="stylesheet" type="text/css" href= "{{ url_for('static',filename='css/main.css') }}">
+  <link rel="stylesheet" type="text/css" href= "{{ url_for('static',filename='css/jquery.dropdown.css') }}">
 	<!-- Font-icon css-->
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-     <body class="app sidebar-mini rtl">
+     <body class="app sidebar-mini rtl" id = "body">
     <!-- Navbar-->
-    <header class="app-header"><a class="app-header__logo" href="index.html">Majestic Yatra</a>
+    <header class="app-header"><a class="app-header__logo" href="index.html">UMC</a>
       <!-- Sidebar toggle button--><a class="app-sidebar__toggle" href="#" data-toggle="sidebar" aria-label="Hide Sidebar"></a>
       <!-- Navbar Right Menu-->
       <ul class="app-nav">
@@ -29,12 +30,12 @@
     <aside class="app-sidebar">
       <div class="app-sidebar__user"><img class="app-sidebar__user-avatar" src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/48.jpg" alt="User Image">
         <div>
-          <p class="app-sidebar__user-name">{{context["name"]}} </p>
-          <p class="app-sidebar__user-designation">{{context["role"]}}</p>
+          <p class="app-sidebar__user-name">{{session["name"]}} </p>
+          <p class="app-sidebar__user-designation">{{session["role"]}}</p>
         </div>
       </div>
       <ul class="app-menu">
-        <li><a class="app-menu__item" href="index.html"><i class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">Dashboard</span></a></li>
+        <li><a class="app-menu__item" href="{{url_for("admin_bp.admin")}}"><i class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">Dashboard</span></a></li>
         <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-globe"></i><span class="app-menu__label" style="font-size:14px; ">Enter Location Information</span><i class="treeview-indicator fa fa-angle-right"></i></a>
           <ul class="treeview-menu">
             <li><a class="treeview-item" href="cityentry.php"><i class="icon fa fa-circle-o"></i> Enter cities</a></li>
