--- a/admin/templates/view_users.html
+++ b/admin/templates/view_users.html
@@ -44,7 +44,7 @@
        </tbody>
    </table>
 </div>
-    <!-- Essential javascripts for application to work-->
+      <!-- Essential javascripts for application to work-->
     <script src={{ url_for('static',filename="js/jquery-3.2.1.min.js") }}></script>
     <script src={{ url_for('static',filename="js/popper.min.js") }}></script>
     <script src={{ url_for('static',filename="js/bootstrap.min.js") }}></script>
@@ -53,6 +53,7 @@
     <script src={{ url_for('static',filename="js/plugins/pace.min.js") }}></script>    
     <script src={{ url_for('static',filename="js/plugins/jquery.dataTables.min.js") }}></script>
     <script src={{ url_for('static',filename="js/plugins/dataTables.bootstrap.min.js") }}></script>
+    <script src={{ url_for('static',filename="js/plugins/sweetalert.min.js") }}></script>
     <script type="text/javascript">$('#sampleTable').DataTable();</script>
 
 {% endblock %}
