--- a/templates/doctor_registration.html
+++ b/templates/doctor_registration.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href= "{{ url_for('static',filename='css/main.css') }}">
     <!-- Font-icon css-->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>User-Register</title>
+    <title>Doctor-Register</title>
   </head>
   <body>
     <section class="material-half-bg">
@@ -25,14 +25,14 @@
       <div class="row">
         <div class="col-lg-12 col-md-12">
           <div class="heading-title text-center">
-            <h2 class="title iq-tw-6 iq-font-white">User Registration {% if context is defined%}{{ context["gell"] }}{% endif %}</h2>
+            <h2 class="title iq-tw-6 iq-font-white">Doctor Registration {% if context is defined%}{{ context["gell"] }}{% endif %}</h2>
           </div>
         </div>
       </div>
       <div class="row justify-content-md-center">
         <div class="col-md-8">
           <div class="iq-login iq-pt-40 iq-pb-30 iq-plr-30">
-            <form action="/register" method="POST" enctype="multipart/form-data"> 
+            <form action="/doctor_register" method="POST" enctype="multipart/form-data"> 
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
               <div class="form-group">
                 <label class="iq-font-white">Name</label>
@@ -99,6 +99,10 @@
                   <label class="iq-font-white">Address</label>
                   <textarea class="form-control" name="addr" placeholder="Address Required" maxlength="150" required></textarea>
                 </div>
+                <div class="col-sm-12 mt-2">
+                  <label class="iq-font-white">Clinic Address</label>
+                  <textarea class="form-control" name="clinic_addr" placeholder="Clinic Address Required" maxlength="150" required></textarea>
+                </div>
                 </div>
               </div>
               <div class="form-group iq-mt-20">
@@ -136,8 +140,7 @@
                       } 
                       if(mm<10){
                         mm='0'+mm
-                      } 
-                      yyyy1 = yyyy+2; 
+                      }
                       dd1 = dd+1;
                       today = yyyy+'-'+mm+'-'+dd;
                       $(document).ready(function(){
