--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,9 @@
     <div class="tile" style="margin:25vh;;text-align:center;height:30vh; background-color:gray;">
             <div class="tile">
                     <h3 class="tile-title">Universal Medical Card Portal</h3>
-                    <div class="tile"><a class="btn btn-primary" href="{{ url_for('register') }}">Register</a></div>
+                    <div class="tile"><a class="btn btn-primary" href="{{ url_for('register') }}">User Register</a>
+                    <a class="btn btn-primary" href="{{ url_for('hospital_register') }}">Hospital Register</a>
+                    <a class="btn btn-primary" href="{{ url_for('doc_register') }}">Doctor Register</a></div>
                     <div class="tile"><a class="btn btn-primary" href="{{ url_for('login') }}">Login</a></div>
             </div>
         </div>
