--- a/templates/doctor_registration.html
+++ b/templates/doctor_registration.html
@@ -25,7 +25,7 @@
       <div class="row">
         <div class="col-lg-12 col-md-12">
           <div class="heading-title text-center">
-            <h2 class="title iq-tw-6 iq-font-white">Doctor Registration {% if context is defined%}{{ context["gell"] }}{% endif %}</h2>
+            <h2 class="title iq-tw-6 iq-font-white">Doctor Registration</h2>
           </div>
         </div>
       </div>
@@ -42,12 +42,15 @@
                 <label class="control-label">Gender</label><br>
                 <input type="radio" name="gender" value="Male" style="position: absolute; width: 50px; height: 30px;"><label style="margin-left: 50px;margin-right: 10px; font-size: 18px;">Male</label>
                 <input type="radio" name="gender" value="Female" style="position: absolute; width: 50px; height: 30px;"><label style="margin-left:50px;margin-right: 30px; font-size: 18px;">Female</label>
-                <input type="radio" name="gender" value="Both" checked="True" style="position: absolute; width: 50px; height: 30px;"><label style="margin-left:50px;margin-right: 30px; font-size: 18px;">Other</label>
               </div>
               <div class="form-group">
                 <label class="iq-font-white">Aadhar</label>
                 <input type="text" class="form-control" name="aadhar" placeholder="Aadhar Required" maxlength="12">
                 <input type="file" class="form-control" name="aadhar-file" placeholder="Aadhar Required">
+              </div>
+              <div class="form-group">
+                <label class="iq-font-white">User Picture</label>
+                <input type="file" class="form-control" name="image-file" placeholder="Image Required">
               </div>
               <div class="form-group">
                 <label class="iq-font-white">User Picture</label>
@@ -63,7 +66,7 @@
               </div>
               <div class="form-group">
                 <label class="iq-font-white">Password</label>
-                <input type="text" class="form-control" name="pass" placeholder="Email Required" maxlength="32">
+                <input type="password" class="form-control" name="pass" placeholder="Password Required" maxlength="32">
               </div>
               <div class="form-group iq-mt-20">
                 <div class="row iq-mt-30">
@@ -116,7 +119,6 @@
               </div>
               <button type="submit" class="button iq-mt-15" name="submit">Submit</button>
             </form>
-
             <div class="text-right iq-mtb-10">
               <div class="iq-font-white iq-tw-6">Already a User?</div><a href="/login" class="iq-font-green iq-tw-6 link">Login Now</a>
             </div>
