--- a/templates/hospital_registration.html
+++ b/templates/hospital_registration.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href= "{{ url_for('static',filename='css/main.css') }}">
     <!-- Font-icon css-->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>User-Register</title>
+    <title>Hospital-Register</title>
   </head>
   <body>
     <section class="material-half-bg">
@@ -25,29 +25,23 @@
       <div class="row">
         <div class="col-lg-12 col-md-12">
           <div class="heading-title text-center">
-            <h2 class="title iq-tw-6 iq-font-white">User Registration {% if context is defined%}{{ context["gell"] }}{% endif %}</h2>
+            <h2 class="title iq-tw-6 iq-font-white">Hospital Registration {% if context is defined%}{{ context["gell"] }}{% endif %}</h2>
           </div>
         </div>
       </div>
       <div class="row justify-content-md-center">
         <div class="col-md-8">
           <div class="iq-login iq-pt-40 iq-pb-30 iq-plr-30">
-            <form action="/register" method="POST" enctype="multipart/form-data"> 
+            <form action="/hospital_register" method="POST" enctype="multipart/form-data"> 
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
               <div class="form-group">
                 <label class="iq-font-white">Name</label>
                 <input type="text" class="form-control" name="uname" placeholder="Name Required" maxlength="80">
               </div>
               <div class="form-group">
-                <label class="control-label">Gender</label><br>
-                <input type="radio" name="gender" value="Male" style="position: absolute; width: 50px; height: 30px;"><label style="margin-left: 50px;margin-right: 10px; font-size: 18px;">Male</label>
-                <input type="radio" name="gender" value="Female" style="position: absolute; width: 50px; height: 30px;"><label style="margin-left:50px;margin-right: 30px; font-size: 18px;">Female</label>
-                <input type="radio" name="gender" value="Both" checked="True" style="position: absolute; width: 50px; height: 30px;"><label style="margin-left:50px;margin-right: 30px; font-size: 18px;">Other</label>
-              </div>
-              <div class="form-group">
-                <label class="iq-font-white">Aadhar</label>
-                <input type="text" class="form-control" name="aadhar" placeholder="Aadhar Required" maxlength="12">
-                <input type="file" class="form-control" name="aadhar-file" placeholder="Aadhar Required">
+                <label class="iq-font-white">Permit Documents</label>
+                <input type="text" class="form-control" name="aadhar" placeholder="Permit ID Required">
+                <input type="file" class="form-control" name="aadhar-file" placeholder="Permit Documents Required">
               </div>
               <div class="form-group">
                 <label class="iq-font-white">User Picture</label>
@@ -63,12 +57,12 @@
               </div>
               <div class="form-group">
                 <label class="iq-font-white">Password</label>
-                <input type="text" class="form-control" name="pass" placeholder="Email Required" maxlength="32">
+                <input type="password" class="form-control" name="pass" placeholder="Password Required" maxlength="32">
               </div>
               <div class="form-group iq-mt-20">
                 <div class="row iq-mt-30">
                   <div class="col-sm-3">
-                    <label class="iq-font-white" >State of Residence</label>
+                    <label class="iq-font-white" >State of Existence</label>
                     <select class="form-control" style="width: 100%;" name="state">
                       <option value="1">Gujarat</option>
                       <option value="2">Maharashtra</option>
@@ -96,7 +90,7 @@
                     </select>
                   </div>
                   <div class="col-sm-12 mt-2">
-                  <label class="iq-font-white">Address</label>
+                  <label class="iq-font-white">Hospital Address</label>
                   <textarea class="form-control" name="addr" placeholder="Address Required" maxlength="150" required></textarea>
                 </div>
                 </div>
@@ -104,7 +98,7 @@
               <div class="form-group iq-mt-20">
                 <div class="row iq-mt-30">
                   <div class="col-sm-12">
-                    <label class="iq-font-white" >Birth Date</label>
+                    <label class="iq-font-white" >Date of Registration</label>
                     <input type="date" class="form-control" id="sdte" name="startdte" min="" required style="text-align: center;">
                   </div>
               </div>
@@ -112,7 +106,6 @@
               </div>
               <button type="submit" class="button iq-mt-15" name="submit">Submit</button>
             </form>
-
             <div class="text-right iq-mtb-10">
               <div class="iq-font-white iq-tw-6">Already a User?</div><a href="/login" class="iq-font-green iq-tw-6 link">Login Now</a>
             </div>
