--- a/templates/radiologist_registration.html
+++ b/templates/radiologist_registration.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href= "{{ url_for('static',filename='css/main.css') }}">
     <!-- Font-icon css-->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>User-Register</title>
+    <title>Radiologist-Register</title>
   </head>
   <body>
     <section class="material-half-bg">
@@ -25,14 +25,14 @@
       <div class="row">
         <div class="col-lg-12 col-md-12">
           <div class="heading-title text-center">
-            <h2 class="title iq-tw-6 iq-font-white">User Registration {% if context is defined%}{{ context["gell"] }}{% endif %}</h2>
+            <h2 class="title iq-tw-6 iq-font-white">RadioLogist Registration</h2>
           </div>
         </div>
       </div>
       <div class="row justify-content-md-center">
         <div class="col-md-8">
           <div class="iq-login iq-pt-40 iq-pb-30 iq-plr-30">
-            <form action="/register" method="POST" enctype="multipart/form-data"> 
+            <form action="/radiologist_register" method="POST" enctype="multipart/form-data"> 
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
               <div class="form-group">
                 <label class="iq-font-white">Name</label>
@@ -42,7 +42,6 @@
                 <label class="control-label">Gender</label><br>
                 <input type="radio" name="gender" value="Male" style="position: absolute; width: 50px; height: 30px;"><label style="margin-left: 50px;margin-right: 10px; font-size: 18px;">Male</label>
                 <input type="radio" name="gender" value="Female" style="position: absolute; width: 50px; height: 30px;"><label style="margin-left:50px;margin-right: 30px; font-size: 18px;">Female</label>
-                <input type="radio" name="gender" value="Both" checked="True" style="position: absolute; width: 50px; height: 30px;"><label style="margin-left:50px;margin-right: 30px; font-size: 18px;">Other</label>
               </div>
               <div class="form-group">
                 <label class="iq-font-white">Aadhar</label>
@@ -52,6 +51,10 @@
               <div class="form-group">
                 <label class="iq-font-white">User Picture</label>
                 <input type="file" class="form-control" name="image-file" placeholder="Image Required">
+              </div>
+              <div class="form-group">
+                <label class="iq-font-white">License</label>
+                <input type="file" class="form-control" name="license-file" placeholder="Image Required">
               </div>
               <div class="form-group">
                 <label class="iq-font-white">Phone</label>
@@ -99,6 +102,10 @@
                   <label class="iq-font-white">Address</label>
                   <textarea class="form-control" name="addr" placeholder="Address Required" maxlength="150" required></textarea>
                 </div>
+                <div class="col-sm-12 mt-2">
+                  <label class="iq-font-white">Clinic Address</label>
+                  <textarea class="form-control" name="clinic_addr" placeholder="Clinic Address Required" maxlength="150" required></textarea>
+                </div>
                 </div>
               </div>
               <div class="form-group iq-mt-20">
@@ -112,7 +119,6 @@
               </div>
               <button type="submit" class="button iq-mt-15" name="submit">Submit</button>
             </form>
-
             <div class="text-right iq-mtb-10">
               <div class="iq-font-white iq-tw-6">Already a User?</div><a href="/login" class="iq-font-green iq-tw-6 link">Login Now</a>
             </div>
@@ -136,8 +142,7 @@
                       } 
                       if(mm<10){
                         mm='0'+mm
-                      } 
-                      yyyy1 = yyyy+2; 
+                      }
                       dd1 = dd+1;
                       today = yyyy+'-'+mm+'-'+dd;
                       $(document).ready(function(){
