--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
                     <div class="tile"><a class="btn btn-primary" href="{{ url_for('register') }}">User Register</a>
                     <a class="btn btn-primary" href="{{ url_for('hospital_register') }}">Hospital Register</a>
                     <a class="btn btn-primary" href="{{ url_for('doc_register') }}">Doctor Register</a></div>
+                    <a class="btn btn-primary" href="{{ url_for('doc_register') }}">Radiologist Register</a></div>
                     <div class="tile"><a class="btn btn-primary" href="{{ url_for('login') }}">Login</a></div>
             </div>
         </div>
